--- a/Week 5/Programs/Week 5.2/TODO-MERN-APP/frontend/src/App.css
+++ b/Week 5/Programs/Week 5.2/TODO-MERN-APP/frontend/src/App.css
@@ -1,42 +1,95 @@
 #root {
   max-width: 1280px;
-  margin: 0 auto;
+  /* margin: 0 auto; */
   padding: 2rem;
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.container {
+  width: 100vw;
+  /* display: flex; */
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.header {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  text-align: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.todos-wrapper {
+  display: flex;
+  width: 95%;
+  margin: 0 auto;
+  gap: 2rem;
 }
 
-.card {
-  padding: 2em;
+.add-todo-container {
+  width: 20%;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
-.read-the-docs {
-  color: #888;
+.add-todo-container input {
+  padding: 0.5rem;
+  border-radius: 0.5rem;
+  /* //add a light cyan border */
+  border: 1px solid rgba(0, 255, 255, 0.8);
+  outline: none;
+}
+
+.add-todo-container input::placeholder {
+  color: #ccc;
+}
+
+.add-todo-container button {
+  border: 1px solid #ccc;
+  cursor: pointer;
+}
+
+.todos-container {
+  width: 70%;
+  display: flex;
+  flex-direction: column;
+  /* gap: 0.5rem; */
+  /* padding: 0.5rem; */
+  /* border-bottom: 1px solid #ccc; */
+}
+
+.single-todo {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0.5rem 1rem;
+  border-radius: 0.5rem;
+  border: 1px solid #ccc;
+  margin-bottom: 0.5rem;
+  gap: 1rem;
+}
+
+.todo-main {
+  width: 70%;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+.todo-title {
+  font-weight: 800;
+  text-transform: uppercase;
+}
+
+.todo-btn {
+  background: rgb(205, 116, 140);
+}
+
+.btn-disabled {
+  background: #ccc;
+  cursor: not-allowed;
+}
+
+.todo-done {
+  text-decoration: line-through;
+  color: #ccc;
 }
