--- a/Week 5/Programs/Week 5.2/TODO-MERN-APP/frontend/src/index.css
+++ b/Week 5/Programs/Week 5.2/TODO-MERN-APP/frontend/src/index.css
@@ -13,19 +13,19 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
+/* a {
   font-weight: 500;
   color: #646cff;
   text-decoration: inherit;
 }
 a:hover {
   color: #535bf2;
-}
+} */
 
 body {
   margin: 0;
   display: flex;
-  place-items: center;
+  /* place-items: center; */
   min-width: 320px;
   min-height: 100vh;
 }
