--- a/Week 5/Assignment/frontend/src/pages/Home/Home.module.css
+++ b/Week 5/Assignment/frontend/src/pages/Home/Home.module.css
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   margin: 0 auto;
+  position: relative;
   /* padding: 0 2rem; */
   align-items: center;
   color: white;
@@ -11,6 +12,31 @@
 .container .header {
   font-size: 2rem;
   margin-bottom: 4rem;
+}
+
+.container .logoutBtnContainer {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  gap: 1rem;
+  top: 35px;
+  right: 10px;
+}
+
+.container .logoutBtn {
+  border: none;
+  border-radius: 5px;
+  padding: 0.5rem 1rem;
+  background-color: #595959;
+  color: white;
+  font-size: 1rem;
+  cursor: pointer;
+}
+
+.container .logoutBtn:hover {
+  background-color: #595959;
+  opacity: 0.8;
 }
 
 .sectionWrapper {
