--- a/Week 7/Programs/Week 7.1/src/index.css
+++ b/Week 7/Programs/Week 7.1/src/index.css
@@ -12,3 +12,9 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+button {
+  padding: 10px;
+  margin: 10px;
+  font-size: 1rem;
+}
